# grapevine_stomatal_traits

./: .gitignore  HydroshootEdits.rtf  LICENSE  README.md  pyproject.toml
biblio/: minimum_stomatal_conductance.xlsx
example/: PickleConvert.py
example/potted_grapevine/: main_preprocess.py  params.json  psi_soil.input  sim.py  sim_with_preprocessed_inputs.py  weather.csv
example/sim_test/: sim.py
grapevine_stomatal_traits/sims/: params_base.json  preprocess_functions.py  sim_functions.py
grapevine_stomatal_traits/sims/fresno/: config.py  weather_fresno_historical.csv
grapevine_stomatal_traits/sims/oakville/: config.py  weather_oakville_rcp85.csv
grapevine_stomatal_traits/simulator/: irrigation.py
grapevine_stomatal_traits/sources/: config.py
grapevine_stomatal_traits/sources/mockups/: main_mockups.py
mockups/: main_mockups.py
sims/: params_base.json  preprocess_functions.py  utils.py
sims/fresno/: config.py  main_preprocess.py  weather_fresno_rcp85.csv
sims/oakville/: weather_oakville_rcp45.csv  weather_oakville_rcp85.csv
simulator/: hydroshoot_wrapper.py  inputs.py  irrigation.py
sources/data_raw/: RootstockBlockData_2022.xlsx
sources/mockups/sprawl/: virtual_digit.xlsx
sources/preprocess/: basic_functions.py
sources/weather/: weather_fresno_historical.csv  weather_fresno_rcp45.csv  weather_fresno_rcp85.csv  weather_oakville_historical.csv  weather_oakville_rcp45.csv  weather_oakville_rcp85.csv
src/grapevine_stomatal_traits/analysis/: plots.py
src/grapevine_stomatal_traits/sims/: params_base.json  preprocess_functions.py  (+1 more)
(+24 files in other folders)
