[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grapevine_stomatal_traits"
version = "1.0.0"
authors = [
    { name = "Rami ALBASHA", email = "rami.albasha@inrae.fr" },
    { name = "Megan K. Bartlett", email = "mkbartlett@ucdavis.edu" },
]
description = "Analysis of optimal grapevine stomatal traits in Nappa and San Joaquin Valleys"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RamiALBASHA/grapevine_stomatal_traits"
"Bug Tracker" = "https://github.com/RamiALBASHA/grapevine_stomatal_traits/issues"